# ci

./: .gitmodules  Cargo.toml  README.md  ci  rustfmt.toml
src/: auth.rs  checkers.rs  cli.rs  diagnose.rs  error.rs  fitness.rs  lib.rs  main.rs  strres.rs  testing.rs  ui.rs  util.rs
src/commands/: build.rs  download.rs  genautocomplete.rs  genbashauto.rs  init.rs  list_resources.rs  mod.rs  multitest.rs  submit.rs  test.rs  tracksubmit.rs  vendor.rs
src/commands/download/: mod.rs  sio2.rs
src/commands/init/: codeforces.rs  mod.rs  oioioi.rs  sio2staszic.rs
src/commands/list_resources/: mod.rs  sio2.rs
src/commands/submit/: codeforces.rs  mod.rs  sio2.rs
src/commands/tracksubmit/: codeforces.rs  mod.rs  oioioi.rs
src/ui/: human.rs  json.rs  mod.rs  none.rs
