[package]
name = "ci"
version = "1.0.0"
authors = ["Mateusz Cegiełka <mateusz@cegla.net>"]
description = "CLI for building and testing programming contest tasks"

[dependencies]
structopt = "0.2"
walkdir = "2.1"
colored = "1.5"
tempfile = "2.2"
pbr = "1.0"
itertools = "0.7"
failure = "0.1.1"
failure_derive = "0.1.1"
keyring = "0.6"
rpassword = "2"
reqwest = "0.8.2"
select = "0.4.2"
sio2 = { git = "https://github.com/matcegla/sio2" }
tar = "0.4"
