[package]
name = "ci"
version = "1.2.0-alpha.1"
authors = ["Mateusz Cegiełka <mateusz@cegla.net>"]
description = "CLI for building and testing programming contest tasks"

[dependencies]
structopt = "0.2"
walkdir = "2.1"
colored = "1.6"
tempfile = "3.0"
pbr = "1.0"
itertools = "0.7"
failure = "0.1.1"
failure_derive = "0.1.1"
keyring = "0.6"
rpassword = "2"
reqwest = "0.8.2"
select = "0.4.2"
sio2 = { git = "https://github.com/matcegla/sio2" }
tar = "0.4"
wait-timeout = "0.1.5"
codeforces = { git = "https://github.com/matcegla/codeforces" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"